--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   drift: ^1.5.0
   path_provider: ^2.0.9
   printing: ^5.7.3
+  sqlite3_flutter_libs: ^0.5.4
+  path: ^1.8.0
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
